[package]
name = "rdedupe"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = {version="4.4.16", features=["derive"]}
walkdir = "2.3.2"
md5 = "0.7.0"
rayon = "1.6.1"
indicatif = {version = "*", features = ["rayon"]}

[dev-dependencies]
assert_cmd = "2"
predicates = "3.1.0"cargo install cargo --force
